update to v0.5.0